# HASEL

./: .gitignore  CODING_GUIDELINES.md  README.md  data.py  environment.yml  gridbuttonclick.py  programming_guidelines.md  requirements.txt  segmentation_viewer.py  setup.py  train_reinhard.py  viewer.py
VFLabel/: main.py
VFLabel/calibration/: CMakeLists.txt  README.md
VFLabel/calibration/include/calibration/: Calibration.h  CameraCalibration.h  CorrespondenceMatcher.h  LaserCalibration.h  LaserOptimization.h  RecursionGrid.h
VFLabel/calibration/include/utils/: Camera.h  Correspondences.h  CurveFitting.h  FileUtils.h  ImageUtils.h  Laser.h  PointUtils.h  Timer.h
VFLabel/calibration/source/: main.cpp
VFLabel/calibration/source/calibration/: Calibration.cpp  CameraCalibration.cpp  CorrespondenceMatcher.cpp  LaserCalibration.cpp  LaserOptimization.cpp  RecursionGrid.cpp
VFLabel/calibration/source/utils/: Camera.cpp  Correspondences.cpp  CurveFitting.cpp  FileUtils.cpp  ImageUtils.cpp  Laser.cpp  PointUtils.cpp  Timer.cpp
VFLabel/cv/: Camera.py  Laser.py  __init__.py  analysis.py  gauss_fitting.py  laserpoints.py  point_interpolation.py  reconstruction.py  segmentation.py  (+1 more)
assets/: hasel.xcf  starting_progress_status.json
examples/: GlottisSegmentation.py  PointClickView.py  README.md  SelectCycleView.py  VocalfoldDrawer.py  drawsegmentationview.py  drawsegmentationwidget.py  mainwindow.py  pointclickwidget.py  timer.py  train_glottis_segmentation_network.py  videoplayerwidget.py  zoomableview_example.py
hemilarynx_example2/: progress_status.json
(+118 files in other folders)
